Fix navigation alignment

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -27,10 +27,10 @@
     &__list {
         display: flex;
         flex-direction: column;
-        align-items: center;
         gap: 14px;
     }
     &__button {
+        position: relative;
         text-transform: uppercase;
         font-size: 14px;
         background-color: var(--background-color);
@@ -47,7 +47,8 @@
         }
         &:disabled::before {
             content: '▶';
-            margin-right: 6px;
+            position: absolute;
+            left: -20px;
         }
         @keyframes disabled-and-hover {
             from {
